# antbot_simulation

./: .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_ko.md  CONTRIBUTING.md  CONTRIBUTING_ko.md  README.md  README_ko.md  setting.sh
.github/workflows/: deploy-wiki.yml  ros-ci.yml
antbot/: package.xml
antbot_bringup/: package.xml
antbot_bringup/launch/: robot_state_publisher.launch.py
antbot_camera/: package.xml
antbot_description/: README.md  package.xml
antbot_description/urdf/: antbot.xacro  sensors.xacro
antbot_gazebo/: CMakeLists.txt  README.md  package.xml
antbot_gazebo/config/: swerve_controller_gazebo.yaml  worlds.yaml
antbot_gazebo/launch/: gazebo.launch.py
antbot_gazebo/urdf/: antbot_sim.xacro  gazebo_plugins.xacro  ros2_control_gazebo.xacro
antbot_gazebo/worlds/: depot.sdf  empty.sdf
antbot_hw_interface/: README.md  package.xml
antbot_hw_interface/include/antbot_hw_interface/device/: steering.hpp
antbot_hw_interface/src/: board_interface.cpp
antbot_hw_interface/src/device/: steering.cpp
antbot_imu/: package.xml
antbot_interfaces/: package.xml
antbot_libs/: package.xml
antbot_navigation/: CMakeLists.txt  README.md  README_ko.md  package.xml
antbot_navigation/config/real/: ekf.yaml  nav2_params.yaml  slam_toolbox_params.yaml
antbot_navigation/config/sim/: ekf.yaml  nav2_params.yaml  slam_toolbox_params.yaml
antbot_navigation/docs/: architecture.md  configuration.md  getting-started.md  index.md  nav2-overview.md  simulation.md  swerve-nav2-tuning.md  troubleshooting.md  wiki-nav2-integration.md
antbot_navigation/docs/changelog/: 2026-03-24-nav2-integration-log.md
antbot_navigation/launch/: localization.launch.py  navigation.launch.py  slam.launch.py
antbot_navigation/maps/: depot_sim.pgm  depot_sim.yaml  worlds.yaml
antbot_navigation/rviz/: navigation.rviz
antbot_simul/antbot_gazebo/config/: swerve_controller_gazebo.yaml
antbot_simul/antbot_gazebo/launch/: gazebo.launch.py
antbot_simul/antbot_gazebo/urdf/: antbot_sim.xacro  ros2_control_gazebo.xacro
antbot_simul/antbot_gazebo/worlds/: empty.sdf
antbot_swerve_controller/src/: swerve_drive_controller.cpp
antbot_teleop/: README.md  package.xml  setup.py
docs/wiki/: astro.config.mjs  package-lock.json  package.json
docs/wiki/src/components/: Footer.astro  LatestRelease.astro  Mermaid.astro
docs/wiki/src/content/docs/: index.mdx
docs/wiki/src/content/docs/development-guide/: contributing.md  control-table.mdx  navigation.md  ros-topics.mdx  simulation.md
docs/wiki/src/content/docs/en/: index.mdx
docs/wiki/src/content/docs/en/development-guide/: contributing.md  control-table.mdx  navigation.md  ros-topics.mdx  simulation.md
docs/wiki/src/content/docs/en/hardware/: emergency-stop.mdx  exterior.mdx  hmi-panel.mdx  onboard-computer.mdx  sensor-coordinates.mdx  specifications.mdx
docs/wiki/src/content/docs/en/introduction/: components.mdx  index.mdx
docs/wiki/src/content/docs/en/license/: credits.md  index.md  support.md  support.mdx
docs/wiki/src/content/docs/en/maintenance/: error-codes.md  firmware-diagnostics.mdx  firmware-update.md  known-issues.mdx
docs/wiki/src/content/docs/en/quick-start/: battery-charging.md  battery-charging.mdx  controller.mdx  network.mdx  powering-up.mdx  ssd-mount.md
docs/wiki/src/content/docs/en/software/: environment-setup.mdx  packages.mdx  repository.md  third-party.md
docs/wiki/src/content/docs/hardware/: emergency-stop.mdx  exterior.mdx  hmi-panel.mdx  onboard-computer.mdx  sensor-coordinates.mdx  specifications.mdx
docs/wiki/src/content/docs/introduction/: components.mdx  index.mdx
docs/wiki/src/content/docs/license/: credits.md  index.md  support.md  support.mdx
docs/wiki/src/content/docs/maintenance/: error-codes.md  firmware-diagnostics.mdx  firmware-update.md  known-issues.mdx
docs/wiki/src/content/docs/quick-start/: battery-charging.md  battery-charging.mdx  controller.mdx  network.mdx  powering-up.mdx  ssd-mount.md
docs/wiki/src/content/docs/software/: environment-setup.mdx  packages.mdx  repository.md  third-party.md
docs/wiki/src/styles/: custom.css
vanjee_lidar_msg/: package.xml
vanjee_lidar_sdk/src/vanjee_lidar_msg/: package.xml
