<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antbot_bringup</name>
  <version>1.0.0</version>
  <description>Bringup launch files for ANTBot delivery robot</description>
  <maintainer email="jdu@robotis.com">Daun Jeong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>antbot_description</exec_depend>
  <exec_depend>antbot_hw_interface</exec_depend>
  <exec_depend>antbot_imu</exec_depend>
  <exec_depend>antbot_swerve_controller</exec_depend>
  <exec_depend>antbot_teleop</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>coin_d4_driver</exec_depend>
  <exec_depend>ublox_gps</exec_depend>
  <exec_depend>vanjee_lidar_sdk</exec_depend>
  <exec_depend>antbot_camera</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
