<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antbot_camera</name>
  <version>1.0.0</version>
  <description>Antbot camera driver package supporting V4L2 and USB cameras</description>
  <maintainer email="jaehun@robotis.com">Jaehun Park</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <build_depend>spdlog</build_depend>

  <depend>orbbec_camera</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
