<?xml version="1.0"?>
<!-- Copyright 2026 ROBOTIS AI CO., LTD.
     Licensed under the Apache License, Version 2.0 -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antbot_gazebo</name>
  <version>0.1.0</version>
  <description>Ignition Gazebo simulation package for ANTBot</description>
  <maintainer email="osh@robotis.com">SungHyeon Oh</maintainer>
  <maintainer email="yeeunhsara214@gmail.com">Yeeun Hwang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>antbot_description</exec_depend>
  <exec_depend>antbot_swerve_controller</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
