<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antbot_imu</name>
  <version>1.0.0</version>
  <description>IMU sensor node for ANTBot delivery robot</description>
  <maintainer email="jdu@robotis.com">Daun Jeong</maintainer>
  <license>Apache-2.0</license>
  <author email="odh@robotis.com">Donghoon Oh</author>
  <author email="jdu@robotis.com">Daun Jeong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>antbot_libs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>tf2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
